@@ -2,6 +2,9 @@ Changes with Apache 2.1.3
 
   [Remove entries to the current 2.0 section below, when backported]
 
+  *) mod_ssl: Add ssl_ext_lookup optional function for accessing
+     certificate extensions.   [David Reid, Joe Orton]
+
   *) Add support for use of an external PCRE library; pass the
      --with-pcre flag to configure.  PR 27550.  [Joe Orton,
      Andres Salomon <dilinger voxel.net>]
